2014-09-16 huku <huku@grhack.net>

    * Fixed `snprintf()' related compiler warning on 64-bit systems.
    * Replaced `PyLong_AsSize_t()' with `PyLong_AsLong()'; the first may return
      -1 even though it shouldn't.
    * From now on, we only support Pin >= 2.14.


2014-09-15 huku <huku@grhack.net>

    * Instantiating `Instruction' and `Operand' objects by hand is not possible
      any more.


2014-09-11 huku <huku@grhack.net>

    * Added `InvalidOffsetException' exception class.
    * Method `decode()' of class `XED' was modified to raise the aforementioned
      exception when `itext_offset' doesn't fall within `itext' bounds.


2014-09-10 huku <huku@grhack.net>

    * Fixed bug in `decode()' of class `XED' (`xed_decode()' may fail when the
      third parameter exceeds `XED_MAX_INSTRUCTION_BYTES').


2014-09-09 huku <huku@grhack.net>

    * Added `InvalidExceptionError' exception class.
    * Added "pyxed.h"; includes external definitions that should be visible to
      all source files.
    * Method `decode()' of class `XED' was modified to raise an exception when
      the decoded instruction is invalid.


2014-09-04 huku <huku@grhack.net>

    * Added "check.c" and "check.h" which contain functions for checking the
      underlying type of `PyObject' variables.
    * Member `itext_offset' of class `XED' is now exported and may be modified.
    * Implemented the following methods in class `Instruction': `get_length()',
      `get_attribute()' and `get_branch_displacement()'.
    * Member `runtime_address' of class `Instruction' is now exported and may be
      modified.
    * Removed sucky `m_xxx()' macros.
    * Renamed C structures `XED', `Instruction' and `Operand' to `xed_t',
      `instruction_t' and `operand_t' respectively. The class names visible to
      Python have remained the same.
    * `XED_ATTRIBUTE_XXX' constants are now visible to Python.


2014-08-14 huku <huku@grhack.net>
