@@ -7,8 +7,12 @@ XED_PREFIX=pin-2.14-67254-gcc.4.4.7-linux/extras/xed2-ia32
 XED_HEADERS=$(XED_PREFIX)/include
 XED_LIBS=$(XED_PREFIX)/lib
 
-CFLAGS=-fPIC -O2 -I$(PYTHON27_HEADERS) -I$(XED_HEADERS) -Wall \
-    -Wno-strict-aliasing -ggdb
+W=-Wall -Wextra \
+    -Wno-unused-parameter \
+    -Wno-old-style-declaration \
+    -Wno-strict-aliasing
+
+CFLAGS=-fPIC -O2 -I$(PYTHON27_HEADERS) -I$(XED_HEADERS) $(W) -ggdb
 LDFLAGS=-L$(PYTHON27_LIBS) -lpython2.7 -L$(XED_LIBS) -lxed -shared
 
 OBJS=check.o operand.o instruction.o xed.o pyxed.o
