@@ -8,103 +8,87 @@
 #include "operand.h"
 
 
-static PyObject *get_imm(PyObject *self, PyObject *args)
+static PyObject *get_imm(operand_t *self, PyObject *args)
 {
-    operand_t *operand = (operand_t *)self;
-    return PyInt_FromLong(xed_operand_imm(operand->operand));
+    return PyInt_FromLong(xed_operand_imm(self->operand));
 }
 
-static PyObject *get_name(PyObject *self, PyObject *args)
+static PyObject *get_name(operand_t *self, PyObject *args)
 {
-    operand_t *operand = (operand_t *)self;
-    return PyInt_FromLong(xed_operand_name(operand->operand));
+    return PyInt_FromLong(xed_operand_name(self->operand));
 }
 
-static PyObject *get_visibility(PyObject *self, PyObject *args)
+static PyObject *get_visibility(operand_t *self, PyObject *args)
 {
-    operand_t *operand = (operand_t *)self;
-    return PyInt_FromLong(xed_operand_operand_visibility(operand->operand));
+    return PyInt_FromLong(xed_operand_operand_visibility(self->operand));
 }
 
-static PyObject *get_type(PyObject *self, PyObject *args)
+static PyObject *get_type(operand_t *self, PyObject *args)
 {
-    operand_t *operand = (operand_t *)self;
-    return PyInt_FromLong(xed_operand_type(operand->operand));
+    return PyInt_FromLong(xed_operand_type(self->operand));
 }
 
-static PyObject *get_xtype(PyObject *self, PyObject *args)
+static PyObject *get_xtype(operand_t *self, PyObject *args)
 {
-    operand_t *operand = (operand_t *)self;
-    return PyInt_FromLong(xed_operand_xtype(operand->operand));
+    return PyInt_FromLong(xed_operand_xtype(self->operand));
 }
 
-static PyObject *get_width(PyObject *self, PyObject *args)
+static PyObject *get_width(operand_t *self, PyObject *args)
 {
-    operand_t *operand = (operand_t *)self;
-    return PyInt_FromLong(xed_operand_width(operand->operand));
+    return PyInt_FromLong(xed_operand_width(self->operand));
 }
 
-static PyObject *get_width_bits(PyObject *self, PyObject *args)
+static PyObject *get_width_bits(operand_t *self, PyObject *args)
 {
-    operand_t *operand = (operand_t *)self;
     xed_uint32_t eosz;
     PyObject *r = NULL;
 
     if(PyArg_ParseTuple(args, "I", &eosz) != 0)
     {
-        r = PyInt_FromSize_t(xed_operand_width_bits(operand->operand, eosz));
+        r = PyInt_FromSize_t(xed_operand_width_bits(self->operand, eosz));
     }
     return r;
 }
 
-static PyObject *dump(PyObject *self, PyObject *args)
+
+/* There were two reasons that we decided _not_ to name the following function
+ * `print()'. First, `print' is a reserved word in Python. Second, `dump()' is
+ * more uniform with respect to some method names in class `Instruction' (e.g.
+ * `dump_intel_format()').
+ */
+static PyObject *dump(operand_t *self, PyObject *args)
 {
-    operand_t *operand = (operand_t *)self;
     char buf[64];
-    xed_operand_print(operand->operand, buf, sizeof(buf) - 1);
+    xed_operand_print(self->operand, buf, sizeof(buf) - 1);
     return PyString_FromString(buf);
 }
 
 
-static PyObject *is_memory_addressing_register(PyObject *self, PyObject *args)
+static PyObject *is_memory_addressing_register(operand_t *self, PyObject *args)
 {
-    operand_t *operand = (operand_t *)self;
     return PyInt_FromSize_t(xed_operand_is_memory_addressing_register(
-        xed_operand_name(operand->operand)));
+        xed_operand_name(self->operand)));
 }
 
-static PyObject *is_register(PyObject *self, PyObject *args)
+static PyObject *is_register(operand_t *self, PyObject *args)
 {
-    operand_t *operand = (operand_t *)self;
     return PyInt_FromSize_t(xed_operand_is_register(xed_operand_name(
-        operand->operand)));
+        self->operand)));
 }
 
 
 static PyMethodDef methods[] =
 {
-    {"get_imm", get_imm, METH_NOARGS, "Equivalent to `xed_operand_imm()'"},
-    {"get_name", get_name, METH_NOARGS, "Equivalent to `xed_operand_name()'"},
-    {"get_visibility", get_visibility, METH_NOARGS,
-        "Equivalent to `xed_operand_operand_visibility()'"},
-    {"get_type", get_type, METH_NOARGS, "Equivalent to `xed_operand_type()'"},
-    {"get_xtype", get_xtype, METH_NOARGS,
-        "Equivalent to `xed_operand_xtype()'"},
-    {"get_width", get_width, METH_NOARGS,
-        "Equivalent to `xed_operand_get_width()'"},
-    {"get_width_bits", get_width_bits, METH_VARARGS,
-        "Equivalent to `xed_operand_get_width_bits()'"},
-    /* There were two reasons we decided _not_ to name this function `print()'.
-     * First, `print' is a reserved word in Python. Second, `dump()' is more
-     * uniform with respect to some method names in class `Instruction' (e.g.
-     * `dump_intel_format()').
-     */
-    {"dump", dump, METH_NOARGS, "Equivalent to `xed_operand_print()'"},
-    {"is_memory_addressing_register", is_memory_addressing_register,
-        METH_NOARGS,
-        "Equivalent to `xed_operand_is_memory_addressing_register()'"},
-    {"is_register", is_register, METH_NOARGS,
-        "Equivalent to `xed_operand_is_register()'"},
+    M_NOARGS(get_imm),
+    M_NOARGS(get_name),
+    M_NOARGS(get_visibility),
+    M_NOARGS(get_type),
+    M_NOARGS(get_xtype),
+    M_NOARGS(get_width),
+    M_VARARGS(get_width_bits),
+    M_NOARGS(dump),
+    M_NOARGS(is_memory_addressing_register),
+    M_NOARGS(is_register),
     {NULL}
 };
 
