@@ -22,9 +22,8 @@ static int init(PyObject *self, PyObject *args, PyObject *kwds)
 }
 
 
-static PyObject *decode(PyObject *self, PyObject *args)
+static PyObject *decode(xed_t *self, PyObject *args)
 {
-    xed_t *xed = (xed_t *)self;
     xed_decoded_inst_t *decoded_inst;
     xed_uint64_t runtime_address;
     Py_ssize_t itext_offset;
@@ -33,29 +32,29 @@ static PyObject *decode(PyObject *self, PyObject *args)
     PyObject *r = NULL;
 
     /* Make sure we have a valid input buffer. */
-    if(is_string(xed->itext) == 0)
+    if(is_string(self->itext) == 0)
     {
         PyErr_SetString(PyExc_TypeError, "Invalid instruction text");
         goto _err;
     }
 
     /* Make sure we have a valid runtime address. */
-    if(is_int_or_long(xed->runtime_address) == 0)
+    if(is_int_or_long(self->runtime_address) == 0)
     {
         PyErr_SetString(PyExc_TypeError, "Invalid runtime address");
         goto _err;
     }
 
     /* Now verify we have a valid offset. */
-    if(is_int_or_long(xed->itext_offset) == 0)
+    if(is_int_or_long(self->itext_offset) == 0)
     {
         PyErr_SetString(PyExc_TypeError, "Invalid instruction text offset");
         goto _err;
     }
 
     /* Have we finished decoding? */
-    itext_offset = PyLong_AsLong(xed->itext_offset);
-    if(itext_offset == PyString_Size(xed->itext))
+    itext_offset = PyLong_AsLong(self->itext_offset);
+    if(itext_offset == PyString_Size(self->itext))
     {
         Py_INCREF(Py_None);
         r = Py_None;
@@ -63,7 +62,7 @@ static PyObject *decode(PyObject *self, PyObject *args)
     }
 
     /* If the offset given is invalid, raise `InvalidOffsetException'. */
-    if(itext_offset < 0 || itext_offset > PyString_Size(xed->itext))
+    if(itext_offset < 0 || itext_offset > PyString_Size(self->itext))
     {
         PyErr_SetString(invalid_offset, "Invalid instruction text offset");
         goto _err;
@@ -72,13 +71,14 @@ static PyObject *decode(PyObject *self, PyObject *args)
     /* Decode next instruction from the input buffer. */
     decoded_inst = PyMem_Malloc(sizeof(xed_decoded_inst_t));
     xed_decoded_inst_zero(decoded_inst);
-    xed_decoded_inst_set_mode(decoded_inst, xed->mmode, xed->stack_addr_width);
-    buf = (const xed_uint8_t *)PyString_AsString(xed->itext) + itext_offset;
+    xed_decoded_inst_set_mode(decoded_inst, self->mmode,
+        self->stack_addr_width);
+    buf = (const xed_uint8_t *)PyString_AsString(self->itext) + itext_offset;
 
     /* If we set `bytes' to something more than `XED_MAX_INSTRUCTION_BYTES', the
      * call to `xed_decode()' below may fail when decoding certain instructions.
      */
-    bytes = PyString_Size(xed->itext) - itext_offset;
+    bytes = PyString_Size(self->itext) - itext_offset;
     if(bytes > XED_MAX_INSTRUCTION_BYTES)
         bytes = XED_MAX_INSTRUCTION_BYTES;
     xed_decode(decoded_inst, buf, bytes);
@@ -88,9 +88,9 @@ static PyObject *decode(PyObject *self, PyObject *args)
      * `xed_decoded_inst_get_length()' will return a valid length even if the
      * decoded instruction is not valid).
      */
-    runtime_address = PyLong_AsLong(xed->runtime_address) + itext_offset;
+    runtime_address = PyLong_AsLong(self->runtime_address) + itext_offset;
     itext_offset += xed_decoded_inst_get_length(decoded_inst);
-    xed->itext_offset = PyLong_FromLong(itext_offset);
+    self->itext_offset = PyLong_FromLong(itext_offset);
 
     /* If the instruction is not valid, raise `InvalidInstructionError'. */
     if(xed_decoded_inst_valid(decoded_inst) == 0)
@@ -107,14 +107,13 @@ _err:
 }
 
 
-static PyObject *set_mode(PyObject *self, PyObject *args)
+static PyObject *set_mode(xed_t *self, PyObject *args)
 {
-    xed_t *xed = (xed_t *)self;
     unsigned int mmode, stack_addr_width;
     if(PyArg_ParseTuple(args, "II", &mmode, &stack_addr_width) != 0)
     {
-        xed->mmode = mmode;
-        xed->stack_addr_width = stack_addr_width;
+        self->mmode = mmode;
+        self->stack_addr_width = stack_addr_width;
     }
     Py_RETURN_NONE;
 }
@@ -133,9 +132,8 @@ static PyMemberDef members[] =
 
 static PyMethodDef methods[] =
 {
-    {"set_mode", set_mode, METH_VARARGS,
-        "Equivalent to `xed_decoded_inst_set_mode()'"},
-    {"decode", decode, METH_NOARGS, "Equivalent to `xed_decode()'"},
+    M_VARARGS(set_mode),
+    M_NOARGS(decode),
     {NULL}
 };
 
